--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-quill": "^1.3.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^2.1.8",
+    "react-tinder-card": "^1.6.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
